--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <body>
         
         <!-- HERO SECTION -->
-        <div>
-            <h1>Visit Torshov</h1>
-            <h2>Enjoy culture and sports in this vibrant district close to the center of Oslo.</h2>
+        <div class="hero">
+            <h1>Visit Boyle Heights</h1>
+            <h2>A vibrant and historic neighborhood rich in its celebration of Latinx heritage and cultural resilience.</h2>
         </div>
         
         <!-- ACTIVITIES SECTION -->
         <div>
-            <h3>Top three activities to do at Torshov</h3>
+            <h3>Top three activities to do in Boyle Heights</h3>
             <img src="images/park.jpg">
             <img src="images/theatre.jpg">
             <img src="images/sports.jpg">
@@ -22,8 +22,8 @@
         <!-- GUIDE SECTION -->
         <div>
             <h3>Your guide</h3>
-            <p>"I have lived at Torshov for over 30 years, so I can show you all of its best parts and hidden secrets."</p>
-            <h4>Per Harald Borgen</h4>
+            <p>"Borned and raised in Boyle Heights, I can show you the best it has to offer"</p>
+            <h4>Angel Rodriguez</h4>
             <img src="images/per.jpg">
         </div>
     </body>
