--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
     <body>
         
         <!-- HERO SECTION -->
         <div class="hero">
-            <h1>Visit Boyle Heights</h1>
-            <h2>A vibrant and historic neighborhood rich in its celebration of Latinx heritage and cultural resilience.</h2>
+            <h1 id="hero-greeting">Visit Boyle Heights</h1>
+            <h2 id="hero-info">A vibrant and historic neighborhood rich in its celebration of Latinx heritage and cultural resilience.</h2>
         </div>
         
         <!-- ACTIVITIES SECTION -->
