added images to activities section

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
         </div>
         
         <!-- ACTIVITIES SECTION -->
-        <div>
+        <div class="activities">
             <h3>Top three activities to do in Boyle Heights</h3>
-            <img src="images/park.jpg">
-            <img src="images/theatre.jpg">
-            <img src="images/sports.jpg">
+            <div class="activities-img">
+                <img src="images/mariachi.webp">
+                <img src="images/mercardito.webp">
+                <img src="images/viaduct.jpeg">
+            </div>
         </div>
 
         <!-- GUIDE SECTION -->
