finished activities section

--- a/index.html
+++ b/index.html
@@ -17,10 +17,27 @@
         <!-- ACTIVITIES SECTION -->
         <div class="activities">
             <h3>Top three activities to do in Boyle Heights</h3>
+
             <div class="activities-img">
-                <img src="images/mariachi.webp">
-                <img src="images/mercardito.webp">
-                <img src="images/viaduct.jpeg">
+                
+                <div id="mariachi">
+                    <img src="images/mariachi.webp">
+                    <h4>Sing along or listen to mariachi music</h4>
+                    <p>Mariachi Plaza is a great place to listen and hire local mariachi muscisians</p>
+                </div>
+
+                <div id="mercardito">
+                    <img src="images/mercardito.webp">
+                    <h4>Everything your heart desires!</h4>
+                    <p>El Mercardito is a busy bazar that carries one-of-kind items</p>
+                </div>
+
+                <div id="viaduct">
+                    <img src="images/viaduct.jpeg">
+                    <h4>Cruise down the newest bridge in Los Angeles</h4>
+                    <p>6th Street Viaduct opened in 2022 and offers the perfect Instagram pic</p>
+                </div>
+
             </div>
         </div>
 
