finished guide section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h3>Top three activities to do in Boyle Heights</h3>
 
             <div class="activities-img">
-                
+
                 <div id="mariachi">
                     <img src="images/mariachi.webp">
                     <h4>Sing along or listen to mariachi music</h4>
@@ -42,11 +42,15 @@
         </div>
 
         <!-- GUIDE SECTION -->
-        <div>
-            <h3>Your guide</h3>
-            <p>"Borned and raised in Boyle Heights, I can show you the best it has to offer"</p>
-            <h4>Angel Rodriguez</h4>
-            <img src="images/per.jpg">
+        <div class="guide">
+            <div class="guide-img-div">
+                <img class="guide-img" src="images/angel.jpg">
+            </div>                 
+            <div class="text">
+                <h3>Your guide</h3>
+                <p>"Borned and raised in Boyle Heights, I can show you the best it has to offer"</p>
+                <h4>Angel Rodriguez</h4>
+            </div>
         </div>
     </body>
 </html>
